production/apps/ingress/old_templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingest-ingress
  annotations:
    # specifically target NGINX ingress controller
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.ingest.testing.data.humancellatlas.org
      http:
        paths:
          - path: /
            backend:
              serviceName: ingest-core-service
              servicePort: 80
